# qrlyzer

./: Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES  pyproject.toml  qrlyzer.pyi
.github/workflows/: CI.yml  tests.yml
src/: lib.rs
tests/: test_lib.rs  test_wheel.py
