[package]
name = "qrlyzer"
license = "MIT"
version = "0.3.2"
edition = "2021"

[lib]
name = "qrlyzer"
crate-type = ["cdylib", "rlib"]

[dependencies]
fast_image_resize = { version = "6.0.0", features = ["image"] }
image = "0.25.10"
imageproc = "0.27.0"
pyo3 = "0.29.0"
rqrr = "0.10.1"
rxing = { version = "0.9.1", default-features = false, features = ["decoders", "encoding_rs", "multi_barcode_readers", "qrcode"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
